--- a/HttpsServicesServer/webClient/partials/nameService/lookupName.html
+++ b/HttpsServicesServer/webClient/partials/nameService/lookupName.html
@@ -2,7 +2,7 @@
 <form novalidate class="simple-form">
     <form role="form">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Enter the name" ng-model="information.name" ng-required>
+            <input type="text" class="form-control" placeholder="Enter the name" ng-model="organization.name" ng-required>
         </div>
         <button type="submit" ng-click="lookup()" class="btn btn-primary" >Lookup</button>
     </form>
