--- a/HttpsServicesServer/webClient/partials/nameService/registerName.html
+++ b/HttpsServicesServer/webClient/partials/nameService/registerName.html
@@ -32,7 +32,7 @@
                     <p class="help-block">{"key1":"value1" ,"key2":"value2"}</p>
                 </div>
 
-                <button type="submit" ng-click="registerDns()" class="btn btn-primary" >Register</button>
+                <button type="submit" ng-click="registerName()" class="btn btn-primary" >Register</button>
             </form>
         </div>
     </div>
