--- a/HttpsServicesServer/webClient/partials/login.html
+++ b/HttpsServicesServer/webClient/partials/login.html
@@ -1,13 +1,14 @@
-<legend>Login Form</legend>
-
-<div class="form-group">
+<div >
+  <legend>Login Form</legend>
+  <div class="form-group">
   <label for="username">Username</label>
   <input type="text" class="form-control" id="username" placeholder="Username" ng-model="user.username">
 </div>
 
-<div class="form-group">
+<div class="form-group" >
   <label for="password">Password</label>
   <input type="password" class="form-control" id="password" placeholder="Password" ng-model="user.password">
 </div>
 
 <button type="button" ng-click="login()" class="btn btn-primary">Login</button>
+</div>
